--- a/_posts/20210-06-25-LIDS.md
+++ b/_posts/20210-06-25-LIDS.md
@@ -55,7 +55,7 @@ An additional verification of the quantitative accuracy of LIDS measurements is 
  </figcaption>
 <p>&nbsp;</p>
 
-![LIDS]({{ site.url | absolute_path}}/assets/images/summary.png){:height="50%" width="50%"}
+![LIDS]({{ site.url | absolute_path}}/assets/images/LIDS_summary.png){:height="50%" width="50%"}
  <figcaption>
     Figure 4 - A comparison of deuterium retention values based on LIDS and TDS shows agreement over a wide range of retention values.
  </figcaption>
