--- a/_posts/2021-06-25-LIDS.md
+++ b/_posts/2021-06-25-LIDS.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: A double whammy! Measuring AND cleaning fusion fuel from a fusion reactor wall.
+title: A double whammy! Quantifying AND cleaning fusion fuel from a fusion reactor wall.
 description: A powerful laser was used to heat up material and quickly remove hydrogen fusion fuel from where it doesn't belong.  
 
 image: assets/images/LIDS_schematic.PNG
@@ -25,7 +25,7 @@ To develop LIDS technology, titanium-deuterium (Ti-D) and tungsten-deuterium (W-
 I used a couple of tricks in order to accurately measure the time evolution and quantity of the released deuterium during laser heating. The first was to isolate the deuterium and hydrogen spectral lines, which was done using a special form of spectral fitting. The second trick was to apply a signal processing technique called deconvolution to the spectroscopic measurements. This was needed to correct for system-level time-dependent effects that arose from the interaction of released deuterium with the vessel walls and due to finite vacuum pumping speed. Deconvolution is a powerful inverse filtering technique used in many fields when overlapping signals need to be separated. The overlap could be in the time, frequency, or spatial domain.
 
 
-![Etcher_schematic]({{ site.url | absolute_path}}/assets/images/etcher_laser_schematic.PNG){:height="75%" width="75%"}
+![Etcher_schematic]({{ site.url | absolute_path}}/assets/images/etcher_laser_schematic.PNG){:height="30%" width="30%"}
  <figcaption>
     Figure 1 - Schematic of experimental setup for LIDS: a) fiber laser, b) spectrometer, c) pyrometer, d) rf plasma chamber with calibrated D2 leak source.
  </figcaption>
@@ -42,20 +42,20 @@ TDS was performed on a sample after LIDS to check if there was any deuterium rem
 An additional verification of the quantitative accuracy of LIDS measurements is seen in Figure 4, which shows agreement between LIDS and TSD over nearly four orders of magnitude in measured areal deuterium retention. This agreement unequivocally demonstrates the viability of calibrated LIDS as a hydrogen isotope inventory measurement and removal diagnostic tool.
 
 
-![TPD]({{ site.url | absolute_path}}/assets/images/WD4_TDS_sim.PNG){:height="50%" width="50%"}
+![TPD]({{ site.url | absolute_path}}/assets/images/WD4_TDS_sim.PNG){:height="25%" width="25%"}
  <figcaption>
     Figure 2 - The solid black line shows thermal desorption spectrometry of a sample with no laser heating, and the dashed red line is a fit based on a diffusion-reaction model for the thermal release of deuterium. The blue line shows the linear increase of the sample temperature during TDS. The dashed black line is TDS data after laser heating, which shows that all the deuterium was released by a single 1 second laser pulse with power density of 8 MW/m2.
  </figcaption>
 <p>&nbsp;</p>
 
 
-![LIDS]({{ site.url | absolute_path}}/assets/images/LIDS_20181101.png){:height="50%" width="50%"}
+![LIDS]({{ site.url | absolute_path}}/assets/images/LIDS_20181101.png){:height="25%" width="25%"}
  <figcaption>
     Figure 3 - Laser pulse (top), surface temperature (middle), and LIDS signal (bottom). The solid black line at the bottom is the deconvoluted D-alpha signal, and the dashed red line is the reaction-diffusion model based on TDS data and with no adjustable parameters.
  </figcaption>
 <p>&nbsp;</p>
 
-![LIDS]({{ site.url | absolute_path}}/assets/images/LIDS_summary.png){:height="50%" width="50%"}
+![LIDS]({{ site.url | absolute_path}}/assets/images/LIDS_summary.png){:height="25%" width="25%"}
  <figcaption>
     Figure 4 - A comparison of deuterium retention values based on LIDS and TDS shows agreement over a wide range of retention values.
  </figcaption>
