--- a/_posts/2021-06-25-LIDS.md
+++ b/_posts/2021-06-25-LIDS.md
@@ -42,7 +42,7 @@ TDS was performed on a sample after LIDS to check if there was any deuterium rem
 An additional verification of the quantitative accuracy of LIDS measurements is seen in Figure 4, which shows agreement between LIDS and TSD over nearly four orders of magnitude in measured areal deuterium retention. This agreement unequivocally demonstrates the viability of calibrated LIDS as a hydrogen isotope inventory measurement and removal diagnostic tool.
 
 
-![TPD]({{ site.url | absolute_path}}/assets/images/WD4_TDS_sim.PNG){:height="25%" width="25%"}
+![TPD]({{ site.url | absolute_path}}/assets/images/WD4_TDS_sim.png){:height="25%" width="25%"}
  <figcaption>
     Figure 2 - The solid black line shows thermal desorption spectrometry of a sample with no laser heating, and the dashed red line is a fit based on a diffusion-reaction model for the thermal release of deuterium. The blue line shows the linear increase of the sample temperature during TDS. The dashed black line is TDS data after laser heating, which shows that all the deuterium was released by a single 1 second laser pulse with power density of 8 MW/m2.
  </figcaption>
