sub and super scripts

--- a/_posts/2021-06-25-LIDS.md
+++ b/_posts/2021-06-25-LIDS.md
@@ -30,7 +30,7 @@ I used a couple of tricks in order to accurately measure the time evolution and 
   <img src="{{site.url}}/assets/images/etcher_laser_schematic.PNG" alt="etcher schematic" height="100%" width = "100%"/>
   <figcaption>
   	<em>
-    Figure 1 - Schematic of experimental setup for LIDS: a) fiber laser, b) spectrometer, c) pyrometer, d) rf plasma chamber with calibrated D2 leak source.
+    Figure 1 - Schematic of experimental setup for LIDS: a) fiber laser, b) spectrometer, c) pyrometer, d) rf plasma chamber with calibrated D<sub>2</sub> leak source.
    	</em>
   </figcaption>
 </figure>
@@ -52,7 +52,7 @@ An additional verification of the quantitative accuracy of LIDS measurements is 
   <img src="{{site.url}}/assets/images/WD4_TDS_sim.png" alt="TDS" height="36%" width = "36%"/>
   <figcaption>
   	<em>  
-    Figure 2 - The solid black line shows thermal desorption spectrometry of a sample with no laser heating, and the dashed red line is a fit based on a diffusion-reaction model for the thermal release of deuterium. The blue line shows the linear increase of the sample temperature during TDS. The dashed black line is TDS data after laser heating, which shows that all the deuterium was released by a single 1 second laser pulse with power density of 8 MW/m2.
+    Figure 2 - The solid black line shows thermal desorption spectrometry of a sample with no laser heating, and the dashed red line is a fit based on a diffusion-reaction model for the thermal release of deuterium. The blue line shows the linear increase of the sample temperature during TDS. The dashed black line is TDS data after laser heating, which shows that all the deuterium was released by a single 1 second laser pulse with power density of 8 MW/m<sup>2</sup>.
    	</em>
   </figcaption>
 </figure>
@@ -65,7 +65,7 @@ An additional verification of the quantitative accuracy of LIDS measurements is 
   <img src="{{site.url}}/assets/images/LIDS_20181101.png" alt="LIDS" height="36%" width = "36%"/>
   <figcaption>
   	<em> 
-    Figure 3 - Laser pulse (top), surface temperature (middle), and LIDS signal (bottom). The solid black line at the bottom is the deconvoluted D-alpha signal, and the dashed red line is the reaction-diffusion model based on TDS data and with no adjustable parameters.
+    Figure 3 - Laser pulse (top), surface temperature (middle), and LIDS signal (bottom). The solid black line at the bottom is the deconvoluted Dα signal, and the dashed red line is the reaction-diffusion model based on TDS data and with no adjustable parameters.
    	</em>
   </figcaption>
 </figure>
