--- a/_posts/2021-06-25-LIDS.md
+++ b/_posts/2021-06-25-LIDS.md
@@ -30,7 +30,7 @@ I used a couple of tricks in order to accurately measure the time evolution and 
   <img src="{{site.url}}/assets/images/etcher_laser_schematic.PNG" alt="etcher schematic" height="40%" width = "40%"/>
   <figcaption>
   	<em>
-    Figure 1 - Schematic of experimental setup for LIDS: a) fiber laser, b) spectrometer, c) pyrometer, d) rf plasma chamber with calibrated D<sub>2</sub> leak source.
+    Figure 1 - Schematic of experimental setup for LIDS: a) fiber laser, b) spectrometer, c) pyrometer, d) RF plasma chamber with calibrated D<sub>2</sub> leak source.
    	</em>
   </figcaption>
 </figure>
