new fusion figure

--- a/_posts/2021-06-25-LIDS.md
+++ b/_posts/2021-06-25-LIDS.md
@@ -9,7 +9,14 @@ image: assets/images/LIDS_schematic.PNG
 
 ### The question
 
-A massive challenge of future fusion reactors is to keep the walls of the reactor clean. The "fuel" for magnetic fusion energy production will be isotopes of hydrogen called deuterium (nucleus consists of a proton and neutron) and tritium (a proton and two neutrons), which will be heated to extreme temperatures and confined in the plasma state. At sufficient temperature, density, and confinement duration, deuterium and tritium will fuse together to form helium and a fast neutron, which will carry excess energy to be harnessed for electricity generation. Since deuterium and tritium are isotopes of hydrogen, I will sometimes use the term "hydrogen" in this post when referring to any of the hydrogen isotopes.
+A massive challenge of future fusion reactors is to keep the walls of the reactor clean. The fuel to be used for magnetic fusion power generation will be isotopes of hydrogen called deuterium (nucleus consists of a proton and neutron) and tritium (a proton and two neutrons), which will be heated to extreme temperatures and confined in the plasma state. At sufficient temperature, density, and confinement duration, deuterium and tritium will fuse together to form helium and a fast neutron, which will carry excess energy to be harnessed for electricity generation.
+
+<center>
+<figure>
+  <img src="{{site.url}}/assets/images/fusion-basic.jpg" alt="etcher schematic" height="40%" width = "40%"/>
+</figure>
+</center>
+<p>&nbsp;</p>
 
 Deuterium and tritium plasma ions can become stuck in the reactor wall either through direct implantation or by being deposited along with plasma-eroded wall material (so-called codeposits). Well, it turns out that tritium is extremely rare. Only a few tens of kilograms exist on earth and it's one of the most valuable substance in the world by weight at about $30k per gram. In addition, since tritium is radioactive there are regulatory limits on the amount of tritium that can be trapped in the walls of a reactor vessel.
 
