--- a/_posts/2021-06-25-LIDS.md
+++ b/_posts/2021-06-25-LIDS.md
@@ -21,10 +21,10 @@ Deuterium and tritium plasma ions can become stuck in the reactor wall either th
 
 For these reasons, in-vessel strategies to accurately measure trapped tritium will be needed to determine where the tritium is hiding. The ability to remove trapped tritium will be essential to keep the total amount below regulatory licensing requirements, and recovering the trapped tritium will be needed to maintain sufficient plasma tritium for fusion reactions and power generation.
 
-Enter laser-induced desorption spectroscopy (LIDS), which serves the dual purpose of both measuring (via optical emission spectroscopy) and removing (via thermal desorption) trapped tritium.
+Enter *laser-induced desorption spectroscopy (LIDS)*, which serves the dual purpose of both measuring (via optical emission spectroscopy) and removing (via thermal desorption) trapped tritium.
 
 
-## The method
+### The method
 
 To develop LIDS technology, titanium-deuterium (Ti-D) and tungsten-deuterium (W-D) codeposit layers were created by magnetron sputtering. The codeposited samples were immersed one at a time in an inductively coupled RF argon plasma, and a high power laser was used to quickly heat the samples with a 1 second pulse width during LIDS. Electrons in the background argon plasma ionized, dissociated, and excited laser-desorbed deuterium, which was measured with an optical spectrometer using Balmer series Dα and Hα emission. A fast pyrometer monitored the sample surface temperature during laser induced desorption. Figure 1 shows the experimental setup of the laser, plasma chamber, spectrometer, pyrometer, and calibrated deuterium gas source for calibration.
 
